Fixed the height of the nav ul so it's perfect on mobile

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -25,7 +25,7 @@ nav ul {
   cursor: pointer;
   display: none;
   list-style-type: none;
-  top: 100%;
+  top: 109%;
   left: 0;
   background-color: rgba(6, 5, 21, 0.9);
   padding: var(--spacing-small);
